--- a/.github/workflows/linters.yml
+++ b/.github/workflows/linters.yml
@@ -1,6 +1,6 @@
 name: Linters
 
-on: [ push, pull_request ]
+on: [push, pull_request]
 
 jobs:
   golangci-lint:
@@ -10,14 +10,14 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Set up Go 1.18
+      - name: Set up Go
         uses: actions/setup-go@v3 # action page: <https://github.com/actions/setup-go>
         with:
-          go-version: 1.18
+          go-version: 1.19
 
       - name: Run linter
         uses: golangci/golangci-lint-action@v3.2.0 # Action page: <https://github.com/golangci/golangci-lint-action>
         with:
-          version: v1.46 # without patch version
+          version: v1.49 # without patch version
           only-new-issues: false # show only new issues if it's a pull request
           args: --timeout=10m --build-tags=race
